fixed some of the alignment

--- a/src/Components/KidsZone/KidZoneApp.css
+++ b/src/Components/KidsZone/KidZoneApp.css
@@ -1,3 +1,7 @@
+main {
+    margin-top: 80px;
+}
+
 .jumbotron-detail-apple-pie{
     background: url('../../images/applepie.jpg') no-repeat fixed;
 }
@@ -7,5 +11,6 @@
     height: 30vh;
     background-size: cover;
  }
+
  .btn{margin:10px}
 
